# CommandNote

./: .gitignore  EXPAND_COLLAPSE_FEATURE.md  README.md  config.py  main.py  pyproject.toml
controllers/: __init__.py  command_controller.py
models/: __init__.py  command_node.py  data_manager.py
views/: __init__.py  webview_app.py
views/static/: app.js  index.html  style.css
